--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,4 +31,9 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.0
 Suggests:
-    covr
+    covr,
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
+URL: https://github.com/davidaarmstrong/asmcjr
+BugReports: https://github.com/davidaarmstrong/asmcjr/issues
