--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -17,7 +17,7 @@ authors:
     href: https://www.essex.ac.uk/people/bakke28107/ryan-bakker
   Howard L. Rosenthal:
     href: https://politics.princeton.edu/people/howard-l-rosenthal
-  David Liao:
+  David, Yen-Cheih Liao:
     href: https://github.com/yl17124
 
 development:
