--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,4 +1,4 @@
-url: https://yl17124.github.io/asmcjr/index.html
+url: https://yl17124.github.io/asmcjr
 
 home:
   title: Analyzing Spatial Models of Choice and Judgment with R
