--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -3,4 +3,39 @@ url: https://yl17124.github.io/asmcjr
 home:
   title: Analyzing Spatial Models of Choice and Judgment with R
 
+authors:
+  David A. Armstrong, II:
+    href: https://github.com/davidaarmstrong
+  Ryan Bakker:
+    href: https://www.essex.ac.uk/people/bakke28107/ryan-bakker
+  Royce Carroll:
+    href: https://www.essex.ac.uk/people/carro40801/royce-carroll
+  Christopher Hare:
+    href: https://www.christopherdhare.com/
+  Keith T. Poole: 
+    href: https://spia.uga.edu/faculty-member/keith-poole/
+  Howard Rosenthal:
+    href: https://as.nyu.edu/content/nyu-as/as/faculty/howard-l-rosenthal.html
 
+template:
+  params:
+    ganalytics: UA-172937037-1
+
+development:
+  mode: auto
+
+
+articles:
+- title: Customise your site
+  navbar: ~
+  contents:
+  - pkgdown
+  - linking
+  - search
+  - metadata
+- title: Testing
+  desc: >
+    These articles are used to test various pkgdown features that can not
+    easily be tested automatically.
+  contents:
+  - starts_with("test")
