--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -16,6 +16,9 @@ authors:
     href: https://spia.uga.edu/faculty-member/keith-poole/
   Howard Rosenthal:
     href: https://as.nyu.edu/content/nyu-as/as/faculty/howard-l-rosenthal.html
+  David Liao:
+    href: https://github.com/yl17124
+  
 
 template:
   params:
