--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,7 +1,7 @@
 url: https://yl17124.github.io/asmcjr/
 
 home:
-  title: "asmcjr: A R package for supporting  the book “2nd Edition Analyzing Spatial Models of Choice and Judgment”"
+  title: "Analyzing Spatial Models of Choice and Judgment”"
 
 authors:
   Dave Armstrong:
