--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -53,7 +53,7 @@ navbar:
       href: reference/index.html
     - icon: fa-github fa-lg
       text: ""
-      href: https://github.com/yl17124/asmcjr
+      href: https://github.com/uniofessex/asmcjr
       
    
 
