--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,4 +1,4 @@
-url: https://yl17124.github.io/asmcjr/
+url: https://uniofessex.github.io/asmcjr/
 
 home:
   title: "Analyzing Spatial Models of Choice and Judgment”"
